<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hide Message</string>
    <string name="sms_import_screen">Tab To Import</string>
    <string name="action_exit">Exit</string>
    <string name="import_message">Select Conversation</string>
    <string name="chooser_title">Send Via</string>
    <string name="action_preferences">Settings</string>
    <string name="pref_export_sms">Export SMS</string>
    <string name="pref_export_sms_summ">Export the message to SMS application (Please un-check to send message with Skype or Viber)</string>
    <string name="pref_import_sms">Import SMS</string>
    <string name="pref_import_sms_summ">Import only from SMS Database</string>
    <string name="action_filepicker">Import text file</string>
    <string name="file_icon">File or folder</string>
    <string name="action_help">Help</string>
    <string name="ok">OK</string>
    <string name="help">Help</string>


</resources>
