<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Export Options">
        <CheckBoxPreference
            android:id="@+id/cbExportSms"
            android:defaultValue="false"
            android:key="pref_export_sms"
            android:summary="@string/pref_export_sms_summ"
            android:title="@string/pref_export_sms" />
    </PreferenceCategory>


    <PreferenceCategory android:title="Import Options">

        <CheckBoxPreference
            android:id="@+id/cbImportSms"
            android:defaultValue="false"
            android:key="pref_import_sms"
            android:summary="@string/pref_import_sms_summ"
            android:title="@string/pref_import_sms" />

    </PreferenceCategory>

</PreferenceScreen>