<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_preferences"
        android:title="@string/action_preferences"
        android:showAsAction="never"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/action_filepicker"
        android:title="@string/action_filepicker"
        android:showAsAction="never"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:showAsAction="never"
        android:orderInCategory="3"/>
    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:showAsAction="never"
        android:orderInCategory="4"/>
</menu>
